# rust_learning

./: README.md
rust_basic/rust_combine/: Cargo.toml
rust_basic/rust_combine/src/: main.rs
rust_basic/rust_field/: Cargo.toml
rust_basic/rust_field/src/: main.rs
rust_basic/rust_func/: Cargo.toml
rust_basic/rust_func/src/: main.rs
rust_basic/rust_hello/src/: main.rs
rust_basic/rust_life/: Cargo.toml
rust_basic/rust_life/src/: main.rs
rust_basic/rust_loop/src/: main.rs
rust_basic/rust_match/src/: main.rs
rust_basic/rust_ownership/src/: main.rs
rust_basic/rust_ref_bor/: Cargo.toml
rust_basic/rust_ref_bor/src/: main.rs
rust_basic/rust_spec_let/: Cargo.toml
rust_basic/rust_spec_let/src/: main.rs
rust_basic/rust_tup/: Cargo.toml
rust_basic/rust_tup/src/: main.rs
rust_embedded/: README.md
rust_embedded/esp/esp_s3_ble/: Cargo.toml  sdkconfig.defaults
rust_embedded/esp/esp_s3_ble/src/: main.rs
rust_embedded/stm/stm32-blink/: Cargo.toml  build.rs
rust_embedded/stm/stm32-blink/.cargo/: config.toml
rust_embedded/stm/stm32-blink/src/: main.rs
