[package]
name = "stm32-c8t6-blink"
version = "0.1.0"
edition = "2021"          # 建议用 2021 稳定版，模板里的 2024 可能太新会导致报错

# --- 依赖库配置 ---
[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
# 崩溃处理 (必须)
panic-probe = { version = "0.3", features = ["print-defmt"] }
# 日志系统 (必须)
defmt = "0.3"
defmt-rtt = "0.4"

# [关键] 你的 STM32F103C8T6 硬件库
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103", "medium"] }


# --- 编译优化配置 (保留模板的精华) ---
# cargo run 时的配置
[profile.dev]
opt-level = 's'   # 优化体积
codegen-units = 1 # 牺牲一点编译速度换取更好优化
debug = 2         # 必须保留调试符号

# cargo run --release 时的配置
[profile.release]
opt-level = 's'
codegen-units = 1
debug = 2
lto = 'fat'       # 开启最强链接优化，让代码更小

# --- 新增内容 ---
[[bin]]
name = "stm32-c8t6-blink" # 注意：这里必须和你文件最上面的 name 保持一致！
test = false
bench = false
